# Dingo

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  mkdocs.yml
.github/workflows/: docs-pages.yml  release-packages.yml
_install/: smoke
_install/include/dingo_lib/: dingo  dingo.hpp
_install/include/dingo_lib/core/: cube.hpp  field.hpp  fill.hpp  functions.hpp  matrix.hpp  types.hpp
_install/include/dingo_lib/detail/: assert.hpp
_install/include/dingo_lib/linalg/: decomp.hpp
_install/lib/cmake/Dingo/: DingoConfig.cmake  DingoTargets-noconfig.cmake  DingoTargets.cmake
_install/share/dingo/: LICENSE  THIRD_PARTY_NOTICES.md
benchmarks/: CMakeLists.txt  runtime_compare.cpp
build-noblas/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-noblas/Testing/Temporary/: CTestCostData.txt
build-noblas/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dingo-tests  dingo-tests-b12d07c_include.cmake  dingo-tests-b12d07c_tests.cmake
cmake/: CPackConfig.cmake  DingoConfig.cmake.in  dingo_install_header
docs/: basic-operations.md  contributing-docs.md  core-types.md  eigen-interop.md  faq.md  getting-started.md  index.md  limitations.md  linear-algebra.md
docs/api-reference/: cube-and-cell.md  functions.md  index.md  interop.md  linalg.md  matrix-and-vectors.md
docs/styles/: extra.css
include/dingo/: dingo.hpp
include/dingo/core/: cell.hpp  cube.hpp  functions.hpp  matrix.hpp  types.hpp
include/dingo/detail/: eigen_dense.hpp  random.hpp
include/dingo/interop/: eigen.hpp
include/dingo/linalg/: decomp.hpp
packaging/macos/: installer.plist
packaging/wix/: dingo.wxs
scripts/: install.ps1  install.sh
tests/: CMakeLists.txt  test_core.cpp  test_linalg.cpp
